bachelor defense 99% done

--- a/Latex/Bachelor_Defense_latex/demo.bib
+++ b/Latex/Bachelor_Defense_latex/demo.bib
@@ -5,3 +5,9 @@ howpublished = {\url{https://www-01.ibm.com/software/data/bigdata/what-is-big-da
 note = {Accessed: 2016-09-08},
 year={2016}
 }
+
+@article{SchuldFingerhuth,
+author = {Schuld, Maria and Fingerhuth, Mark and Petruccione, Francesco},
+title = {{Amplitude-based quantum k-nearest neighbour algorithm. Manuscript in preparation.}},
+year = {2016}
+}
